--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
+body{
+  background-color: #282c34;
+  color: white;
+  text-align: center;
+  justify-content: top;
+  font-size: calc(10px + 2vmin);
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -19,7 +27,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   font-size: calc(10px + 2vmin);
   color: white;
 }
